--- a/ChallengesAndResults/ChallengesAndResults/Pages/Index.cshtml
+++ b/ChallengesAndResults/ChallengesAndResults/Pages/Index.cshtml
@@ -1,7 +1,4 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<a href="/dance">理解度確認!　理解度増進!　C#基本演習ブック・ソースでダンス!　結果集計表</a>
+<a href="/test">動作テスト用　結果集計表</a>
