--- a/ChallengesAndResults/ChallengesAndResults/Pages/test.cshtml
+++ b/ChallengesAndResults/ChallengesAndResults/Pages/test.cshtml
@@ -4,7 +4,7 @@
 @functions {
     protected override void OnInit()
     {
-        Util.SetResource("clisttest");
+        Util.SetResource("clisttest1.txt", "test");
         base.OnInit();
         UriHelper.NavigateTo("/list");
     }
