--- a/ChallengesAndResults/ChallengesAndResults/Pages/dance.cshtml
+++ b/ChallengesAndResults/ChallengesAndResults/Pages/dance.cshtml
@@ -1,2 +1,12 @@
 ﻿@page "/dance"
+@inject Microsoft.AspNetCore.Blazor.Services.IUriHelper UriHelper
+
+@functions {
+    protected override void OnInit()
+    {
+        Util.SetResource("clistdance.txt", "C# Dance");
+        base.OnInit();
+        UriHelper.NavigateTo("/list");
+    }
+}
 
