--- a/ChallengesAndResults/ChallengesAndResults/Pages/list.cshtml
+++ b/ChallengesAndResults/ChallengesAndResults/Pages/list.cshtml
@@ -14,14 +14,14 @@
         <td>@Util.Names[i]</td>
         <td>
             <div class="form-check mycheck">
-                <input type="checkbox" class="form-check-input" id="try@i">
-                <label class="form-check-label" for="try@i"></label>
+                <input type="checkbox" class="form-check-input  form-control-lg" id="try@i">
+                <label class="form-check-label" for="try@i" style="font-size:2em;">挑戦!</label>
             </div>
         </td>
         <td>
             <div class="form-check mycheck">
                 <input type="checkbox" class="form-check-input" id="correct@i">
-                <label class="form-check-label" for="correct@i"></label>
+                <label class="form-check-label" for="correct@i" style="font-size:2em;">正解!</label>
             </div>
         </td>
     </tr>
