--- a/ChallengesAndResults/ChallengesAndResults/Pages/list.cshtml
+++ b/ChallengesAndResults/ChallengesAndResults/Pages/list.cshtml
@@ -10,18 +10,20 @@
     </tr>
     @for (int i = 0; i < Util.Names.Count; i++)
     {
+        string t = "try" + i.ToString();
+        string c = "correct" + i.ToString();
     <tr>
         <td>@Util.Names[i]</td>
         <td>
             <div class="form-check mycheck">
-                <input type="checkbox" class="form-check-input  form-control-lg" id="try@i">
-                <label class="form-check-label" for="try@i" style="font-size:2em;">挑戦!</label>
+                <input type="checkbox" class="form-check-input  form-control-lg" id="@t">
+                <label class="form-check-label" for="@t">挑戦!</label>
             </div>
         </td>
         <td>
             <div class="form-check mycheck">
-                <input type="checkbox" class="form-check-input" id="correct@i">
-                <label class="form-check-label" for="correct@i" style="font-size:2em;">正解!</label>
+                <input type="checkbox" class="form-check-input" id="@c">
+                <label class="form-check-label" for="@c">正解!</label>
             </div>
         </td>
     </tr>
