remove bad class

--- a/ChallengesAndResults/ChallengesAndResults/Pages/list.cshtml
+++ b/ChallengesAndResults/ChallengesAndResults/Pages/list.cshtml
@@ -16,7 +16,7 @@
         <td>@Util.Names[i]</td>
         <td>
             <div class="form-check mycheck">
-                <input type="checkbox" class="form-check-input  form-control-lg" id="@t">
+                <input type="checkbox" class="form-check-input" id="@t">
                 <label class="form-check-label" for="@t">挑戦!</label>
             </div>
         </td>
