--- a/ChallengesAndResults/ChallengesAndResults/Pages/list.cshtml
+++ b/ChallengesAndResults/ChallengesAndResults/Pages/list.cshtml
@@ -1,44 +1,50 @@
 ﻿@page "/list/{name}/{vname}"
 
-<h1>@Util.ManifestName</h1>
+    <header class="myheader">
+        <p>This is foxe3d header</p>
+    </header>
 
-<table>
-    <tr>
-        <th>[Name]</th>
-        <th>[Try]</th>
-        <th>[Correct]</th>
-    </tr>
-    @for (int i = 0; i < Util.Names.Count; i++)
-    {
-        string t = "try" + i.ToString();
-        string c = "correct" + i.ToString();
-    <tr>
-        <td>@Util.Names[i]</td>
-        <td>
-            <div class="form-check mycheck">
-                <input type="checkbox" class="form-check-input" id="@t">
-                <label class="form-check-label" for="@t">挑戦!</label>
-            </div>
-        </td>
-        <td>
-            <div class="form-check mycheck">
-                <input type="checkbox" class="form-check-input" id="@c">
-                <label class="form-check-label" for="@c">正解!</label>
-            </div>
-        </td>
-    </tr>
-    }
-</table>
+    <div class="mycontent">
+        <h1>@Util.ManifestName</h1>
 
-@functions {
-    [Parameter]
-    private string Name { get; set; } = "";
-    [Parameter]
-    private string VName { get; set; } = "";
+        <table>
+            <tr>
+                <th>[Name]</th>
+                <th>[Try]</th>
+                <th>[Correct]</th>
+            </tr>
+            @for (int i = 0; i < Util.Names.Count; i++)
+            {
+                string t = "try" + i.ToString();
+                string c = "correct" + i.ToString();
+                <tr>
+                    <td>@Util.Names[i]</td>
+                    <td>
+                        <div class="form-check mycheck">
+                            <input type="checkbox" class="form-check-input" id="@t">
+                            <label class="form-check-label" for="@t">挑戦!</label>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="form-check mycheck">
+                            <input type="checkbox" class="form-check-input" id="@c">
+                            <label class="form-check-label" for="@c">正解!</label>
+                        </div>
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
 
-    protected override void OnInit()
-    {
-        base.OnInit();
-        Util.SetResource(Name,VName);
-    }
-}
+        @functions {
+        [Parameter]
+        private string Name { get; set; } = "";
+        [Parameter]
+        private string VName { get; set; } = "";
+
+        protected override void OnInit()
+        {
+            base.OnInit();
+            Util.SetResource(Name, VName);
+        }
+        }
