--- a/ChallengesAndResults/ChallengesAndResults/wwwroot/css/site.css
+++ b/ChallengesAndResults/ChallengesAndResults/wwwroot/css/site.css
@@ -144,17 +144,18 @@ input[type="checkbox"]:checked {
     background: #ccc;
     position: fixed;
     width:100%;
-    height:3em;
+    height:6em;
 }
 .mycontent {
-    padding-top: 3em;
+    padding-top: 6em;
 }
 
 .graph {
     position: relative; /* IE is dumb */
-    width: 300px;
+    width: 80%;
     border: 1px solid #207870;
     padding: 2px;
+    margin: 2px 2em;
 }
 .graph .bar {
     display: block;
