--- a/ChallengesAndResults/ChallengesAndResults/Shared/MainLayout.cshtml
+++ b/ChallengesAndResults/ChallengesAndResults/Shared/MainLayout.cshtml
@@ -17,5 +17,5 @@
     </div>
 </div>
 @functions {
-protected override Task OnInitAsync() => Util.MainLayoutInitializeEntry(localStorage, UriHelper);
+protected override void OnInit() => Util.MainLayoutInitializeEntry(localStorage, UriHelper);
 }
