--- a/ChallengesAndResults/ChallengesAndResults/Pages/list.cshtml
+++ b/ChallengesAndResults/ChallengesAndResults/Pages/list.cshtml
@@ -31,13 +31,13 @@
                 <td>@Util.Names[i]</td>
                 <td>
                     <div class="form-check mycheck">
-                        <input type="checkbox" class="form-check-input" id="@t" bind="@Util.TryChecks[i0]" onclick="@onchange" />
+                        <input type="checkbox" class="form-check-input" id="@t" bind="@Util.TryChecks[i0]"  />
                         <label class="form-check-label" for="@t">挑戦!</label>
                     </div>
                 </td>
                 <td>
                     <div class="form-check mycheck">
-                        <input type="checkbox" class="form-check-input" id="@c" bind="@Util.CorrectChecks[i0]" onclick="@onchange" />
+                        <input type="checkbox" class="form-check-input" id="@c" bind="@Util.CorrectChecks[i0]"  />
                         <label class="form-check-label" for="@c">正解!</label>
                     </div>
                 </td>
@@ -59,8 +59,9 @@
         base.OnInit();
         await Util.SetResource(Name, VName);
     }
-    private async void onchange()
+    protected async override Task OnAfterRenderAsync()
     {
+        await base.OnAfterRenderAsync();
         await Util.Save();
     }
 }
