--- a/ChallengesAndResults/ChallengesAndResults/Shared/MainLayout.cshtml
+++ b/ChallengesAndResults/ChallengesAndResults/Shared/MainLayout.cshtml
@@ -20,5 +20,5 @@
     </div>
 </div>
 @functions {
-    protected override void OnInit() => Util.MainLayoutInitializeEntry(localStorage, UriHelper);
+    protected override void OnInit() => Util.MainLayoutInitializeEntry(localStorage, UriHelper, this);
 }
