--- a/ChallengesAndResults/ChallengesAndResults/Pages/list.cshtml
+++ b/ChallengesAndResults/ChallengesAndResults/Pages/list.cshtml
@@ -45,10 +45,11 @@
         }
 
     </table>
-    <input type="file" />
-    <button type="button" class="btn btn-primary">Import</button>
+    Import: <input type="file" onchange="handleFileSelect(this.files);" />
     <button type="button" class="btn btn-primary" onclick="@export">Export</button>
     <button type="button" class="btn btn-primary" onclick="@clear">Clear</button>
+
+
 </div>
 
 @functions {
@@ -61,6 +62,7 @@
 
     protected async override Task OnInitAsync()
     {
+        Util.PageRefer = this;
         base.OnInit();
         await Util.SetResource(Name, VName);
     }
@@ -81,5 +83,10 @@
     private void export()
     {
         Util.uriHelper.NavigateTo($"/export/{Name}/{VName}");
+    }
+    public void StateHasChangedProxy()
+    {
+        Console.WriteLine("this.StateHasChanged();");
+        this.StateHasChanged();
     }
 }
